--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 author_profile: true
 excerpt: "This Homepage should display a **SQL Query**."
 header:
-  overlay_image: "/assets/images/Orders_and_Customers.PNG"
+  overlay_image: /assets/images/Orders_and_Customers.PNG
   caption: "Photo credit: [**bjlim**](https://benbenstone.blogspot.com/)
   actions:
     - label: "More Info"
