--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ author_profile: true
 excerpt: "This Homepage should display a **SQL Query**."
 header:
   overlay_image: /assets/images/Orders_and_Customers.PNG
-  caption: "Photo credit: [**bjlim**](https://benbenstone.blogspot.com/)
+  caption: "Photo credit: [**bjlim**](https://benbenstone.blogspot.com/)"
   actions:
     - label: "More Info"
       url: "https://unsplash.com"
