--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-author_profile: true
+author_profile: false # true
 excerpt: "This Homepage should display a **SQL Query**."
 header:
   overlay_image: /assets/images/Orders_and_Customers2.PNG
